:recycle: Refactor of sharing api to match restful guidelines
